Fixed header not being visible on Chromium-based browsers...

--- a/index.css
+++ b/index.css
@@ -26,7 +26,6 @@ header {
     display: block;
     position: sticky;
     background-color: #212329;
-    overflow: hidden;
     margin: 0;
     padding: 0;
 }
